--- a/manifest.yml
+++ b/manifest.yml
@@ -1,5 +1,6 @@
 ---
 applications:
-- env:
-    GOVERSION: go1.9
+- buildpack: go_buildpack
+  env:
+    GOVERSION: 1.x
     GOPACKAGENAME: github.com/cloudfoundry-samples/logging-route-service
